--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <h1> Hello World ! </h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua.
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua.</p>
 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat.</p>
 </body>
 
