Adding strong element

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <h4>This is a heading 4</h4>
     <h5>This is a heading 5</h5>
     <h6>This is a heading 6</h6>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    <p>Lorem ipsum dolor sit amet, <strong>consectetur adipiscing
+            elit</strong>, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua.</p>
 
     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
