Adding em element

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h5>This is a heading 5</h5>
     <h6>This is a heading 6</h6>
     <p>Lorem ipsum dolor sit amet, <strong>consectetur adipiscing
-            elit</strong>, sed do eiusmod tempor incididunt ut labore et dolore
+            elit</strong>, sed do eiusmod <em>tempor incididunt</em> ut labore et dolore
         magna aliqua.</p>
 
     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
