Adding commets tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         My First Webpage
     </title>
 </head>
+<!---Adding body element also like heading, paragraph, stromg, em-->
 
 <body>
     <h1>This is a heading 1</h1>
